resources/style.css
/* for scrollbar */
/* width */
::-webkit-scrollbar
{
    width: 0.625em;
}
  
/* Track */
::-webkit-scrollbar-track
{
    border-radius: 0.625em;
    background-color: transparent;
}
   
  /* Handle */
  ::-webkit-scrollbar-thumb
  {
    background: blue; 
    border-radius: 0.625em;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover
  {
    background: red;
  }
/* for webpage */
body
{
    background-color: wheat;
    color: blue;
    font-family: Helvetica, Arial, Georgia, Tahoma, Roboto;
    font-weight: 500;
}

#navbar {
    background-color: rgb(0 74 255 / 54%); /* Blue background color */
    position: fixed; /* Make it stick/fixed */
    top: -50px; /* Hide the navbar 50 px outside of the top view */
    width: 100%; /* Full width */
    transition: top 1s; /* Transition effect when sliding down (and up) */
  }
  
  /* Style the navbar links */
  #navbar a {
    float: left;
    display: block;
    color: red;
    text-align: center;
    padding: 0.9375em;
    text-decoration: dashed;
  }
  
  #navbar a:hover {
    background-color: yellow;
    color: black;
    text-decoration: underline;
  }

header
{
    padding-top: 10px;
    padding-bottom: 10px;
    text-align: center;
    position: relative;
    background-color: rgb(0 74 255 / 54%);
}

.title
{
    text-align: left;
    font-size: 50px;
    margin: 0px;
    padding: 0px;
}

nav
{
    text-align: left;
    font-size: 1.5em;
    font-style: italic;
    position: relative;
}

.page
{
    text-decoration: underline;
    color: white;
}

#profile-picture
{
    height: 13em;
    width: 12.5em;
    position: absolute;
    top: 0;
    right: 0;
    border: 2.5px solid rgb(255, 0, 0);
    border-radius: 50%;
}

a:link
{
    color: blue;
    text-decoration: underline;
}

a:visited
{
    color: blue;
    text-decoration: underline;
}

a:hover
{
    color: red;
    text-decoration: underline;
}

main
{
    text-align: center;
    font-size: 1.3em;
}

h2
{
    text-align: left;
    text-decoration: underline;
}

ul
{
    text-align: left;
}

ol
{
    text-align: left;
}

#excursion
{
    width: 100%;
    height: 18.75em;
    border: 0.5px solid blue;
    border-radius: 0.625em;
}

#main-footer
{
    background-color: rgb(0 74 255 / 54%);
    text-align: center;
    /*font-size: 1em;*/
    height: 12.5em;
    width: 100%;
    color: black;
    position: relative;
}

#copyright
{
    text-align: left;
    position: absolute;
    bottom: 0;
    right: 0;
    padding-left: 1em;
    padding-bottom: 1em;
}

h3
{
    text-align: left;
}

#conclusion
{
    text-align: center;
}

#certificates
{
    height: 11.5em;
    width: 15em;
}

/* Dropdown part */
.dropbtn {
    background-color: blue;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: red;
  }
  
  .dropdown {
    position: sticky;
    left: 0;
    align-content: left;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: red;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  .dropdown-content a:hover
  {
    background-color: red;
}
  
  .dropdown:hover .dropdown-content
  {
    display: block;
}
  
  .dropdown:hover .dropbtn
  {
    background-color: red;
}

